methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:19: error: type mismatch;
 found   : Unit
 required: Boolean
  backward(7)
          ^